<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Formula Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="x3">x<sup>3</sup></string>
    <string name="x2">x<sup>2</sup></string>
    <string name="logab">Log<sub>a</sub>b</string>
    <string name="x10x">x10<sup>x</sup></string>
    <string name="xy">x<sup>y</sup></string>
    <string name="sqrt">\u221A</string>
    <string name="sqrt3"><sup>3</sup>\u221A</string>
    <string name="ysqrt"><sup>y</sup>\u221A</string>
    <string name="ey">e<sup>y</sup></string>
    <string name="sin1">sin<sup>-1</sup></string>
    <string name="cos1">cos<sup>-1</sup></string>
    <string name="tan1">tan<sup>-1</sup></string>
    <string name="ENG1">ENG<sup>-1</sup></string>
    <string name="pi">\u03C0</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
